force-app/main/default/objects/DogRelationship__c/DogRelationship__c.object-meta.xml
<CustomObject>
    <description>Connection between a dog and a contact</description>
    <label>Dog Relationship</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Dog Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dogs Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>