force-app/main/default/objects/DogRelationship__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A dog for this contact</description>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Humans</relationshipLabel>
    <relationshipName>DogsContacts</relationshipName>
    <type>Lookup</type>
</CustomField>