force-app/main/default/objects/DogRelationship__c/fields/DogStatus__c.field-meta.xml
<CustomField>
    <fullName>DogStatus__c</fullName>
    <formula>TEXT(Dog__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dog Status</label>
    <type>Text</type>
</CustomField>