force-app/main/default/objects/DogRelationship__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
    >Team the dog and human are on.  Only valid if the relationship is dog-client or dog-trainer.</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Dogs Relationships</relationshipLabel>
    <relationshipName>Dogs_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>